Fix jumping checkboxes issue for bsl in letters

--- a/src/sass/letters.scss
+++ b/src/sass/letters.scss
@@ -37,6 +37,7 @@
 
   table {
     input[type="checkbox"] {
+      height: inherit;
       margin: auto;
       opacity: inherit;
       position: inherit;
